# pairingbuddy

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  workflow-visualizer.html
.claude-plugin/: plugin.json
agents/: brainstorm-requirements.md  classify-task.md  commit-changes.md  create-test-placeholders.md  curate-guidance.md  decompose-tracer-bullets.md  design-ux-architect.md  design-ux-builder.md  design-ux-critic.md  design-ux-explorer.md  design-ux-gallery-generator.md  design-ux-token-generator.md  design-ux-validator.md  design-ux-visual-builder.md  document-spike.md  enumerate-scenarios-and-test-cases.md  explore-spike-unit.md  identify-code-issues.md  identify-coverage-gaps.md  identify-test-issues.md  implement-code.md  implement-tests.md  refactor-code.md  refactor-tests.md  run-all-tests.md  scope-refactoring.md  sequence-tasks.md  setup-spike.md  solidify-architecture.md  spike-echo.md  summarize-spike.md  update-documentation.md  verify-coverage.md  verify-test-coverage.md
commands/: code.md  design-ux.md  plan.md
contracts/: agent-config.yaml  skill-config.yaml  test-terminology.yaml
hooks/: guardian.mjs  hooks.json  session-start.mjs  session-start.sh  solo-progress.mjs
scripts/: solo-buddy.sh  sync-shared-files.py
tests/: __init__.py  conftest.py  shared-files.yaml  skill-manifest.yaml  skill-structure-spec.yaml  test_agent_solo_mode.py  test_guardian_agent_info.py  test_guardian_solo.py  test_hook_registration.py  test_no_stdout_output.py  test_skill_contracts.py  test_skill_structure.py  test_skills.py  test_solo_buddy.py  test_solo_buddy_pr_creation.py  test_solo_mode_guard.py  test_status_file_written.py  (+1 more)
(+182 files in other folders)
